--- a/Assignment 1/Assignment 1.ipynb
+++ b/Assignment 1/Assignment 1.ipynb
@@ -158,7 +158,7 @@
    "id": "520e888a",
    "metadata": {},
    "source": [
-    "### MountainCar-v0 Analysis\n",
+    "## MountainCar-v0 Analysis\n",
     "\n",
     "**Observation Space:** Box(2,) - Two continuous values:\n",
     "- Position of car along x-axis (-1.2 to 0.6)\n",
@@ -182,10 +182,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1c86eb15",
+   "metadata": {},
+   "source": [
+    "#### MountainCar Observation Space\n",
+    "```\n",
+    "Box([-1.2 -0.07], [0.6 0.07], (2,), float32)\n",
+    "```\n",
+    "- **Position**: Range [-1.2, 0.6] represents the valley (negative) to goal hill (positive)\n",
+    "- **Velocity**: Range [-0.07, 0.07] shows limited speed capabilities\n",
+    "- **Insight**: The narrow velocity range explains why direct climbing is impossible - the car simply cannot build enough speed in one direction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e7adffc0",
    "metadata": {},
    "source": [
-    "### Acrobot-v1 Analysis\n",
+    "## Acrobot-v1 Analysis\n",
     "\n",
     "**Observation Space:** Box(6,) - Six continuous values representing joint angles and velocities\n",
     "\n",
@@ -203,6 +217,26 @@
     "- Must use momentum and gravity to swing up\n",
     "- Precise timing needed for successful swings"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2dc7c51",
+   "metadata": {},
+   "source": [
+    "#### Acrobot Observation Space  \n",
+    "```\n",
+    "Box([-1. -1. -1. -1. -12.566371 -28.274334], [1. 1. 1. 1. 12.566371 28.274334], (6,), float32)\n",
+    "```\n",
+    "- **Joint Angles** (first 4 values): Normalized to [-1, 1] using sine/cosine representations\n",
+    "- **Angular Velocities** (last 2 values): Much larger ranges (±12.57, ±28.27 rad/s)\n",
+    "- **Insight**: The high angular velocity limits suggest this system can build significant rotational energy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6040eb9c",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
